--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ datasets/amazon-book/kg_final.txt
 datasets/yelp2018/_rel_entity_freq
 datasets/yelp2018/_rel_ecount
 datasets/
+trained_model/
 *.pyc
 __pycache__
 trained_model/
